First 2 sections are created

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Assignment 01</title>
 </head>
@@ -15,11 +18,22 @@
             <h1 class="logo">LOGO</h1>
             <button class="primary-btn">Sign Up</button>
         </nav>
-        <section>
-
+        <section class="hero container">
+            <h1 class="hero-title">Cool Dark UI Template for<br> Webflow Agencies!</h1>
+            <button class="primary-btn">Stay Focused</button>
         </section>
     </header>
     <main>
+        <section style="background-color: #f5f8ff; width: 100%; padding: 100px 0px;">
+            <div class="action-section">
+                <div>
+                    <h2 class="action-title">See It in Action</h2>
+                    <p class="action-text">Explore the live preview and imagine your<br> brand in this bold new look.</p>
+                    <button class="primary-btn">Leunch Live Preview</button>
+                </div>
+                <img class="action-img" src="./Assets/wc-mini.png" alt="">
+            </div>
+        </section>
 
     </main>
     <footer>
