--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <button class="primary-btn">Stay Focused</button>
         </section>
     </header>
-    <main>
-        <section style="background-color: #f5f8ff; width: 100%; padding: 100px 0px;">
+    <main style="background-color: #f5f8ff;">
+        <section class="section-basics">
             <div class="action-section">
                 <div>
                     <h2 class="action-title">See It in Action</h2>
@@ -34,7 +34,78 @@
                 <img class="action-img" src="./Assets/wc-mini.png" alt="">
             </div>
         </section>
-
+        <section class="section-basics">
+            <div style="text-align: center; background-color: #e5e7ff; width: 80%; border-radius: 24px; margin: auto; padding: 60px 0px 40px;">
+                <h2 class="secondary-title">Joined Thousands of Productive Users</h2>
+                <div style="display: flex; justify-content: space-around; padding: 20px;">
+                    <div>
+                        <h1 class="numbers">50K</h1>
+                        <p class="small-text">Active Users</p>
+                    </div>
+                    <div>
+                        <h1 class="numbers">2M+</h1>
+                        <p class="small-text">Focus Sessions</p>
+                    </div>
+                    <div>
+                        <h1 class="numbers">95%</h1>
+                        <p class="small-text">Satisfaction Rate</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-basics">
+            <h2 class="secondary-title">What our users say</h2>
+            <div style="width: 80%; display: flex; justify-content: space-between; margin: auto; padding: 20px;">
+                <div class="review-card">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <h2 class="review-title">Loved by Designers</h2>
+                    <p class="review-text">This template instantly leveled up our<br> presence.” – Studio Vertex</p>
+                    <div style="display: flex; align-items: center; padding: 20px 0px 10px 0px;">
+                        <img class="avatar" src="./Assets/avatar.png" alt="">
+                        <div style="padding-left: 20px;">
+                            <p class="review-text">Reviewer Name</p>
+                            <p class="review-date">Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review-card">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <h2 class="review-title">Loved by Designers</h2>
+                    <p class="review-text">This template instantly leveled up our<br> presence.” – Studio Vertex</p>
+                    <div style="display: flex; align-items: center; padding: 20px 0px 10px 0px;">
+                        <img class="avatar" src="./Assets/avatar.png" alt="">
+                        <div style="padding-left: 20px;">
+                            <p class="review-text">Reviewer Name</p>
+                            <p class="review-date">Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review-card">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <img class="star-icon" src="./Assets/icon-star.png" alt="">
+                    <h2 class="review-title">Loved by Designers</h2>
+                    <p class="review-text">This template instantly leveled up our<br> presence.” – Studio Vertex</p>
+                    <div style="display: flex; align-items: center; padding: 20px 0px 10px 0px;">
+                        <img class="avatar" src="./Assets/avatar.png" alt="">
+                        <div style="padding-left: 20px;">
+                            <p class="review-text">Reviewer Name</p>
+                            <p class="review-date">Date</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
