--- a/index.html
+++ b/index.html
@@ -106,8 +106,35 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-basics">
+            <div style="width: 80%; background-color: white; margin: auto; text-align: center; padding: 50px 0px; border-radius: 14px;">
+                <h2 class="action-title" style="font-size: 50px;">Ready to focus better</h2>
+                <p class="review-date" style="padding: 20px 0px;">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="primary-btn">Get Started Free</button><br>
+                <img src="./Assets/wc-big.png" style="margin: 30px 0px; border-radius: 48px;">
+            </div>
+        </section>
+
+        <section class="section-basics">
+            <div style="width: 80%; display: flex; justify-content: space-between; margin: auto; align-items: center;">
+               <h1 style="font-family: Raleway; font-size: 97px;">Let’s Get in<br> Touch</h1>
+               <div class="form-container">
+                    <form class="contact-form">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" placeholder="example@email.com">
+                        <label for="text">Name</label>
+                        <input type="text" type="text" id="name" placeholder="full name">
+                        <label for="message">Message</label>
+                        <textarea id="message" placeholder="write your message...." rows="5"></textarea>
+                        <button type="submit" class="primary-btn">Get in Touch</button>
+                    </form>
+               </div> 
+            </div>
+
+        </section>
     </main>
-    <footer>
+    <footer> 
 
     </footer>
     
