Footer is updated

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
                 <img class="action-img" src="./Assets/wc-mini.png" alt="">
             </div>
         </section>
+
         <section class="section-basics">
             <div style="text-align: center; background-color: #e5e7ff; width: 80%; border-radius: 24px; margin: auto; padding: 60px 0px 40px;">
-                <h2 class="secondary-title">Joined Thousands of Productive Users</h2>
+                <h2 class="secondary-title" style="padding-bottom: 20px;">Joined Thousands of Productive Users</h2>
                 <div style="display: flex; justify-content: space-around; padding: 20px;">
                     <div>
                         <h1 class="numbers">50K</h1>
@@ -53,6 +54,7 @@
                 </div>
             </div>
         </section>
+
         <section class="section-basics">
             <h2 class="secondary-title">What our users say</h2>
             <div style="width: 80%; display: flex; justify-content: space-between; margin: auto; padding: 20px;">
@@ -127,15 +129,22 @@
                         <input type="text" type="text" id="name" placeholder="full name">
                         <label for="message">Message</label>
                         <textarea id="message" placeholder="write your message...." rows="5"></textarea>
-                        <button type="submit" class="primary-btn">Get in Touch</button>
+                        <button type="submit" class="primary-btn" style="padding: 16px;">Get in Touch</button>
                     </form>
                </div> 
             </div>
-
         </section>
     </main>
-    <footer> 
 
+    <footer style="padding: 80px 0px;"> 
+        <h1 class="logo" style="text-align: center; font-size: 100px;">LOGO</h1>
+        <p style="font-family: 'Inter'; font-size: 16px; color: #8987A1; text-align: center; padding: 10px 0px;">Ready to elevate your online presence? Contact us today to discuss<br> your project and discover how we can bring your vision to life.</p>
+        <div style="display: flex; justify-content: center; gap: 40px; padding: 20px 0px;">
+            <a href="#" style="color:#8987A1; text-decoration: none; font-family: 'Inter';">Home</a>
+            <a href="#" style="color:#8987A1; text-decoration: none; font-family: 'Inter';">About</a>
+            <a href="#" style="color:#8987A1; text-decoration: none; font-family: 'Inter';">How it Works</a>
+            <a href="#" style="color:#8987A1; text-decoration: none; font-family: 'Inter';">Services</a>
+        </div>
     </footer>
     
 </body>
